[project]
name = "chatbillingexample"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "chainlit>=2.5.5",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.16",
    "passlib>=1.7.4",
]
